feat: sprint 4 — estabilização, domínio e ambiente local
- Remove campo apiUrl do Cluster (kubeconfig como fonte única de verdade — ADR-0001)
- Adiciona migration V4 para dropar coluna api_url
- Cria docker-compose.dev.yml, README e .env.example para setup local
- Adiciona CONTEXT.md com glossário de domínio (grill-with-docs)
- Configura docs/agents/ para skills de engenharia (issue tracker local, triage labels, domain docs)
- Atualiza CLAUDE.md com bloco Agent skills
- Reorganiza sprints.md — sprint 4 redefinida, deploy simplificado adiado
- Cria .scratch/sprint-4/ com PRD e issues rastreadas

Co-Authored-By: Claude Sonnet